results/SpecGenBench/0-shot/log-PassPillowBranch-2023_11_28_23_55_27.txt
class PassPillowBranch {
    //@ requires n > 0;
    //@ requires time >= 0;
    //@ ensures \result > 0 && \result <= n;
    public int passPillow(int n, int time) {
        time = time % (n - 1) * 2;
        if (time < n) {
            //@ assert time < n;
            //@ assert \result == time + 1;
            return time + 1;
        }
        //@ assert time >= n;
        //@ assert \result == n * 2 - time - 1;
        return n * 2 - time - 1;
    }
}
/home/max/Documents/JMLGPT/tmp/PassPillowBranch.java:9: error: A \result expression may not be in a assert clause
            //@ assert \result == time + 1;
                        ^
/home/max/Documents/JMLGPT/tmp/PassPillowBranch.java:13: error: A \result expression may not be in a assert clause
        //@ assert \result == n * 2 - time - 1;
                    ^
2 errors

